--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -1,7 +1,9 @@
 \section{Background}
 \label{sec:background}
-Before describing how \system{} works, we outline how a CDN typically operates, what information 
-it naturally has access to, and some of the ongoing legal battles surrounding CDNs.  
+
+We now outline how a CDN typically operates, what information it
+has access to by virtue of running a CDN, and some of the ongoing legal battles
+surrounding CDNs.
 
 \subsection{Content Distribution Networks}
 CDNs provide content caching as a service to content publishers.  A 
