--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -27,24 +27,22 @@ we introduce shared keys between origin servers and exit proxies, how these keys
 stored, how the exit proxies authenticate themselves to origin servers, and how these 
 keys are distributed.
 
-\begin{table*}[t!]
+\begin{table}[t!]
+\footnotesize
 \centering
-\begin{tabular}{| l | l |} 
-\hline
- \multicolumn{1}{|c|}{\bf Design Decision} & \multicolumn{1}{|c|}{\bf Functionality Provided} \\
+\begin{tabular}{ l  p{2in} } 
+ \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
 \hline \hline
- Shared Keys & {Hides content stored on CDN cache nodes} \\
-\hline
- Consistent Hashing & {Maps shared keys to exit proxies evenly} \\
-\hline
- Self-Certifying Identifiers & {Authenticates exit proxies to origin servers} \\
-\hline
- DNS for Key Sharing & {Allows origin server to share keys with exit proxies} \\
-\hline
+ Shared Keys & {Hides content on cache nodes from CDN.} \\
+ Consistent Hashing & {Load balance requests across proxies; ensure no proxy can
+ control a given URL.} \\
+ Self-Certifying Identifiers & {Authenticates exit proxies to origin servers.} \\
+ DNS for Key Sharing & {Allows origin server to share its public key with exit
+ proxies.} \\ \hline
 \end{tabular}
-\caption{The design decisions associated with the setup and logistical aspects of \system{}, and what these decisions provide.}
+\caption{Design decisions associated with \system{} setup.}
 \label{tab:setup}
-\end{table*}
+\end{table}
 
 \paragraph{Shared Keys} 
 To prevent an adversary from learning information, the CDN must not have the knowledge of what 
@@ -117,23 +115,23 @@ the responses they receive.  Table \ref{tab:request_response} highlights these d
 introduce session keys, how requests are routed from clients to exit proxies, and how responses 
 are routed from exit proxies back to the original client.
 
-\begin{table*}[t!]
+\begin{table}[t!]
+\footnotesize
 \centering
-\begin{tabular}{| l | l |} 
-\hline
- \multicolumn{1}{|c|}{\bf Design Decision} & \multicolumn{1}{|c|}{\bf Functionality Provided} \\
+\begin{tabular}{ l  p{1.95in} } 
+ \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
 \hline \hline
- Potentially Spoofed Source Routes & {Hides client identity from other clients, exit proxies, and CDN} \\
-\hline
- Session Keys & {Hides URL in request and hides response} \\
-\hline
- Multicast Response & {Increases performance of returning response to client} \\
-\hline
+Spoofed Source Routes & {Hides origin of client request from other
+ clients, exit proxies, and CDN.} \\
+ Session Keys & {Hides URL and response from CDN.} \\
+ Multicast Response & {Allows CDN to return content directly to client without knowing
+ the client that requested the content.} \\
+ \hline
 \end{tabular}
 \caption{The design decisions associated with content requests and responses, and what these 
 decisions provide.}
 \label{tab:request_response}
-\end{table*}
+\end{table}
 
 \paragraph{Potentially Spoofed Source Routes}
 As described in the previous section, exit proxies query the CDN on behalf of clients, but the exit proxy 
