updates to abstract, intro, threat model

--- a/oakland/abstract.tex
+++ b/oakland/abstract.tex
@@ -8,7 +8,7 @@ many recent legal quandaries. At the heart of the tension, however, is the fact
 that CDNs have rich information both about the content they are serving and the
 users who are requesting that content. 
 This paper offers a technical contribution that is relevant to this ongoing tension
-with design of an Oblivious CDN (OCDN); the system is both compatible with the existing
+with the design of an Oblivious CDN (OCDN); the system is both compatible with the existing
 Web ecosystem of publishers and
 clients and hides from the CDN both the content it is serving and the users
 who are requesting that content. \system{} is compatible with the way that publishers
