--- a/oakland/paper.tex
+++ b/oakland/paper.tex
@@ -4,8 +4,11 @@
 \usepackage{pifont}
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{url}
+\usepackage{breakurl} 
 %%%%%%%%%%%%%%%%%%%%  LOCALS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\def\UrlBreaks{\do\/\do-}
 \newcommand{\system}{{OCDN}}
 \def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 \graphicspath{ {./figures/} }
