--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -1,8 +1,9 @@
 \section{Background}
 \label{sec:background}
 
-We now outline how a CDN typically operates, what information it
-has access to by virtue of running a CDN, and some of the ongoing legal battles
+We now outline how a CDN typically operates, including what information it
+has access to by virtue of running a CDN. We also discuss some of the ongoing legal
+battles
 surrounding CDNs.
 
 \subsection{Content Distribution Networks}
