--- a/oakland/performance.tex
+++ b/oakland/performance.tex
@@ -30,7 +30,7 @@ grows linearly with file size, but for both \system{} and without \system{}; whi
 same pattern, the time to complete requests is, as expected, longer using \system{} as it performs 
 many cryptographic operations and proxies traffic between the client and the CDN.  
 
-\begin{figure}[b!]
+\begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{completion}
 \caption{Time to complete a request with and without \system{}.}
